# GCD

./: CMakeLists.txt  README.md  hand.off  hand_mesh.off  hand_points.txt  hand_points_100.txt  hand_points_200.txt  hand_rosa_normals.txt  hand_rosa_normals_100.txt  hand_rosa_normals_200.txt  runme.sh
include/: Camera.h  GC.h  HermiteCurve.h  Mesh.h  Point.h  Shape.h  Utils.h  Vec3.h  intersect.h  tiny_obj_loader.h
models/: rhino.off
rosa-master/rosa_utils/: pcloud_isoncut.cpp
src/: Camera.cpp  Camera.h  GC.cpp  GC.h  HermiteCurve.h  Mesh.cpp  Mesh.h  Shape.cpp  Shape.h  Trackball.cpp  Vec3.h  intersect.h  main.cpp  test.cpp  tiny_obj_loader.cpp
src/models/: killeroo.off  man.off
